# kearney

./: .dockerignore  README.md  docker-compose.prod.yml  docker-compose.yml  kearney.service  nginx-location.conf  nginx.conf
.github/workflows/: ci-cd.yml
client/: Dockerfile  package.json
client/src/: App.tsx  index.html
client/src/api/: api.ts
client/src/components/: AIChat.tsx  ChatInterface.tsx  ChatInterfaceWithBackend.example.tsx  FileUploadDropZone.tsx
client/styles/: globals.css
server/: .env.example  .gitignore  Dockerfile  pyproject.toml
server/app/: config.py  main.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py
server/app/api/v1/endpoints/: __init__.py  ai_chat.py  file_upload.py
server/app/db/: __init__.py  database.py
server/app/prompts/: __init__.py  prompts.py
server/app/schemas/: __init__.py  api_models.py  chat_schemas.py  file_schemas.py
server/app/services/: __init__.py  ai_service.py  file_service.py  tool_defs.py  tools.py
server/app/utils/: __init__.py  file_processor.py
